# jsobjects

./: .gitignore  CMakeLists.txt  README.md  update.sh
config/: BoostMinimal.cmake  Externals.cmake  GTest-1.6.cmake  JavaScriptCore.cmake  RapidJson.cmake  SwigJS.cmake
examples/swig/: CMakeLists.txt  example_info.h.in  runner.cxx
examples/swig/new_value/: CMakeLists.txt  new_value.hpp  new_value.i  runme.js
examples/swig/value_argument/: CMakeLists.txt  runme.js  value_argument.hpp  value_argument.i
include/: jsobjects.hpp  jsobjects_cpp.hpp  jsobjects_jsc.hpp  jsobjects_v8.hpp
src/cpp/: CMakeLists.txt  jsobjects_cpp.cxx
src/jsc/: CMakeLists.txt  jsobjects_jsc.cxx
src/v8/: CMakeLists.txt  jsobjects_v8.cxx
swig/: RunSwigJS.cmake  jsobjects.i  jsobjects_jsc.i  jsobjects_v8.i
test/: CMakeLists.txt  jsobjects_cpp_test.cxx
test/cpp/: CMakeLists.txt  jsobjects_cpp_test.cxx
test/jsc/: CMakeLists.txt  string_encoding.cxx
